# Fluxlate

./: pyproject.toml
.github/workflows/: publish.yml
src/: translate.py
tests/: test_translation.py
